2007-04-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/spmatrix.c : added
	* tests/layout.at : corrected a bug when building outside
	source tree
	* src/community.c (igraph_community_clauset) : added
	* src/vector.c (igraph_vector_insert) : added
	* src/conversion.c (igraph_get_adjacency_sparse) : added

2007-04-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_edge_betweenness) : 
	'merges' and 'bridges' options added
	* src/community.c (igraph_community_eb_get_merges) : added
	* examples/simple/igraph_community_edge_betweenness: updated

2007-04-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/clustertool.cpp (igraph_spinglass_community)
	(igraph_community_spinglass, igraph_spinglass_my_community)
	(igraph_community_spinglass_single)
	* src/walktrap.cpp (igraph_walktrap_community)
	(igraph_community_walktrap) : community structure functions
	renamed to igraph_community_*

	* src/community.c (igraph_community_edge_betweenness) : 
	optionally returns the e.b. values for the cuts
	* examples/simple/igraph_community_edge_betweenness.c : updated

2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_edge_betweenness) : added
	* examples/simple/igraph_community_edge_betweenness.c : added

	* src/structural_properties.c (igraph_edge_betweenness) : 
	always use one adjacency list for undirected graphs

	* src/vector.c (igraph_vector_min, igraph_vector_which_min) : added

2007-04-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/walktrap.cpp
	* src/walktrap_communities.cpp
	* src/walktrap_graph.cpp
	* src/walktrap_heap.cpp : added
	* examples/simple/walktrap.c : added

	* src/flow.c (igraph_mincut, igraph_i_mincut_undirected) :
	'partition2' and 'cut' arguments added
	* examples/simple/igraph_mincut.c : updated

	* src/flow.c (igraph_i_mincut_value_undirected)
	(igraph_i_mincut_undirected) : former renamed to latter and 
	minimum cut calculation added, there is a simple wrapper under the 
	name of the former